--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -15,7 +15,7 @@
 
 		<div class="page-header">
 			<p>&nbsp;</p>
-			<h1>This is Articulate Updated!</h1>
+			<h1>This is Articulate App..!</h1>
 		</div>
 
 		<div class="row ">
